# voleng

./: CMakeLists.txt  LICENSE  README.md
cmake/: Dependencies.cmake
include/voleng/: app.hpp  appstate.hpp  config.hpp  display.hpp  engine.hpp  engine_system.hpp  input.hpp  job.hpp  job_pool.hpp  resource.hpp  resource_center.hpp  resource_factory.hpp  resource_path.hpp  resource_pkg.hpp  resource_type.hpp  runops.hpp
include/voleng/audio/: audio_engine_system.hpp  music.hpp  music_factory.hpp  music_load_job.hpp  sound_effect.hpp  sound_effect_factory.hpp  sound_effect_load_job.hpp  voice.hpp  voice_properties.hpp
include/voleng/gfx/: graphics_engine_system.hpp  shader_family.hpp  shader_family_factory.hpp  texture.hpp  texture_factory.hpp  texture_load_job.hpp
src/: CMakeLists.txt  display.cpp  engine.cpp  job.cpp  main.cpp  resource_center.cpp  resource_pkg.cpp  resource_type.cpp  shader_family_factory.cpp
src/audio/: CMakeLists.txt  audio_engine_system.cpp  music_factory.cpp  music_load_job.cpp  sound_effect_factory.cpp  sound_effect_load_job.cpp  voice.cpp
src/gfx/: CMakeLists.txt  glad.c  glad.h  graphics_engine_system.cpp  shader_family_factory.cpp  texture_factory.cpp  texture_load_job.cpp
